fix: address 36 SonarCloud MEDIUM code-quality issues
- Stream.toList() in CheckPhase, OneBlockPhase, OneBlocksManager (S6204)
- Proper JUnit assertions in BlockListenerTest2 (S5785)
- Remove useless local variable assignments in BlockListenerTest2 (S1854)
- Add missing @Override to setUp/tearDown in test classes (S1161)
- Remove commented-out code in 5 test files (S125)
- Rename restricted identifier 'record' to 'mobRecord' in MythicMobCustomBlock (S6213)
- Add since/forRemoval to @Deprecated in ChunkGeneratorWorld and Settings (S6355, S1123)
- Remove always-true e.getTo() != null in StartSafetyListener (S2589)
- Remove always-false user == null check in LocationStatsHandler (S2589)
- Replace deprecated PlayerQuitEvent(Player,String) constructor in tests (S5738)
- Replace deprecated EntityExplodeEvent null arg with ExplosionResult.DESTROY (S5738)
- Replace deprecated Biome.name() with getKey().getKey() (S5738)
- Use Map.computeIfAbsent in updateBrushSession (S3824)
- Convert anonymous Runnable to lambda in startContinuousBrush (S1604)
- Remove unused 'phase' parameter from handlePhaseChange (S1172)
- Add reason to @Disabled on testInitBlock (S1607)

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>